--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="index.html">Home</a>
+                        <a href="index.html">asdlasjdHome</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -69,19 +69,21 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/home-bg.jpg')">
+    <header>
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <div class="site-heading">
-                        <h1>Clean Blog</h1>
-                        <hr class="small">
-                        <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
-                    </div>
                 </div>
             </div>
         </div>
     </header>
+    <div>
+        <div class="embed-responsive embed-responsive-16by9">
+            <video autoplay class="embed-responsive-item">
+                <source src="img/demo.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
 
     <!-- Main Content -->
     <div class="container">
