Changed the questions implementation in questions.js. linked new questions.html to the website stereotypes.js will contain all stereotypes which are stored in the array in questions.js. More questions yet to be added and getting next question functionality yet to be added.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img class="img-responsive" width="100" alt="Brand" src="img/logo.png">                   
+                    <img class="img-responsive" width="100" clickable="no " alt="Brand" src="img/logo.png">                   
                 </a>
             </div>
 
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="post.html">Explore</a>
+                        <a href="questions.html">Explore</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
