Fixed the questions page and implemented the looping functionality fot multiple questions randomly.

--- a/questions.html
+++ b/questions.html
@@ -83,6 +83,7 @@
             </div>
             <p id="right-wrong"></p>
             <p id="details"></p>
+            <div id="next"></div>
         </div> 
     </div>
     
@@ -99,7 +100,7 @@
 
     <!-- Theme JavaScript -->
     <script src="js/clean-blog.min.js"></script>
-    <script src="js/questions.js"></script>
+ 
     <script src="js/stereotypes.js"></script>
     <script src="js/questions.js"></script>
     
