--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="questions.html">Explore</a>
+                        <a href="options.html">Explore</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
