--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="questions.html">Explore</a>
+                        <a href="options.html">Explore</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
