--- a/questions.html
+++ b/questions.html
@@ -71,7 +71,7 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
+    <div class="container" id="question-box">
        <div class="jumbotron">
             <h1 id="question"></h1>
             <div class="btn-group btn-group-justified" role="group" aria-label="...">
@@ -104,7 +104,6 @@
  
     <script src="js/stereotypes.js"></script>
     <script src="js/questions.js"></script>
-    
     
 
 </body>
