--- a/questions.html
+++ b/questions.html
@@ -16,7 +16,7 @@
 
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
-
+    
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -44,8 +44,8 @@
                     <span class="sr-only">Toggle navigation</span>
                     Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="index.html">
-                    <img class="img-responsive" width="100" clickable="no " alt="Brand" src="img/logo.png">                   
+                  <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive" id="logo" alt="Brand" src="img/logo.png">                   
                 </a>
             </div>
 
@@ -72,23 +72,59 @@
     </nav>
 
     <div class="container" id="question-box">
-    <div class="container">
-       <div class="jumbotron">
-            <h1 id="question"></h1>
-            <div class="btn-group btn-group-justified" role="group" aria-label="...">
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default" onclick="ontrue()">True</button>
-              </div>
-              <div class="btn-group" role="group">
-                <button type="button" class="btn btn-default" onclick="onfalse()">False</button>
-              </div>
-            </div>
-            <p id="right-wrong"></p>
-            <p id="details"></p>
-            <div id="next"></div>
-        </div> 
+        <div class="container">
+           <div class="jumbotron">
+                <h1 id="question"></h1>
+                <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default" onclick="ontrue()">True</button>
+                  </div>
+                  <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-default" onclick="onfalse()">False</button>
+                  </div>
+                </div>
+                <p id="right-wrong"></p>
+                <p id="details"></p>
+                <div id="next"></div>
+            </div> 
+        </div>
     </div>
-    
+     <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <ul class="list-inline text-center">
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Shang-Jia/SDG">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
