--- a/map.html
+++ b/map.html
@@ -13,7 +13,8 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+     <!-- link design css -->
+    <link href="css/design.css" rel="stylesheet">
     <!-- Theme CSS -->
     <link href="css/clean-blog.min.css" rel="stylesheet">
 
@@ -30,13 +31,86 @@
     <![endif]-->
 
 </head>
-<img src="img/map.png" alt="" usemap="#map1488064045164"" />
-<map id="map1488064045164" name="map1488064045164">
-    <area alt="CANADA" title="CANADA" href="CANADA" shape="poly" coords="198,87,135,158,144,224,440,275,524,240,566,186,534,146,554,92,551,65,485,63,498,59,368,57,321,51" />
-    <area alt="USA" title="USA" href="USA" shape="poly" coords="194,89,122,74,69,81,57,98,15,132,6,149,18,161,123,158,138,219" />
-    <area alt="USA" title="USA" href="USA" shape="poly" coords="137,225,425,282,351,345,351,374,347,396,296,369,245,372,137,354,125,351,99,332,95,287" />
-</map>
 
+<!-- Navigation -->
+    <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="index.html">
+                    <img class="img-responsive" id="logo" alt="Brand" src="img/logo.png">                   
+                </a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="options.html">Explore</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+        <img src="img/map.png" class="img-responsive" alt="" usemap="#map1488064045164" />
+        <map id="map1488064045164" name="map1488064045164">
+            <area alt="CANADA" title="CANADA" href="CANADA" shape="poly" coords="198,87,135,158,144,224,440,275,524,240,566,186,534,146,554,92,551,65,485,63,498,59,368,57,321,51" />
+            <area alt="USA" title="USA" href="USA" shape="poly" coords="194,89,122,74,69,81,57,98,15,132,6,149,18,161,123,158,138,219" />
+            <area alt="USA" title="USA" href="USA" shape="poly" coords="137,225,425,282,351,345,351,374,347,396,296,369,245,372,137,354,125,351,99,332,95,287" />
+        </map>
+    </div>
+
+    <!-- Footer -->
+     <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <ul class="list-inline text-center">
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="https://github.com/Shang-Jia/SDG">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fa fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
