Added description to the website and fixed logo overflow on options.html. Background to be fixed.

--- a/about.html
+++ b/about.html
@@ -90,9 +90,7 @@
     <div class="container info-box">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <p>"Beyond The Cover" is a not-for-profit student group that is working towards the elimination of discrimination. We formed in order to participate in the University of Toronto Scarborough Campus Makerspace Challenge. Our goal is to educate the public on different types of stereotypes, discriminations, and inequalities, and then provide them with facts that either disprove or provide historical evidence for these inequalities. We hope to inform people about the deficiencies in their thinking so that they can correct them and use less stereotypes in the future. This will lead to the reduction in discrimination on an individual level, eventually leading to the reduction of discrimination on the societal level. “Beyond The Cover” hopes to start this societal change through our fun and interactive website.</p>
             </div>
         </div>
     </div>
