--- a/options.html
+++ b/options.html
@@ -45,7 +45,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                    <img class="img-responsive" width="100" clickable="no " alt="Brand" src="img/logo.png">                   
+                    <img class="img-responsive" id="logo" alt="Brand" src="img/logo.png">                   
                 </a>
             </div>
 
