Added previous button functionality.

--- a/questions.html
+++ b/questions.html
@@ -86,6 +86,7 @@
                 <p id="right-wrong"></p>
                 <p id="details"></p>
                 <div id="next"></div>
+                <div id="prev"></div>
             </div> 
         </div>
     </div>
