added prev button inline with flexbox

--- a/questions.html
+++ b/questions.html
@@ -85,8 +85,10 @@
                 </div>
                 <p id="right-wrong"></p>
                 <p id="details"></p>
-                <div id="next"></div>
-                <div id="prev"></div>
+               <div class="flex">
+                   <div id="prev"></div>
+                   <div id="next"></div>
+               </div>
             </div> 
         </div>
     </div>
