Added form submission with enformed.io. Background size changes. Background not sized for mobile. Disabled map link.

--- a/map.html
+++ b/map.html
@@ -67,12 +67,14 @@
         </div>
         <!-- /.container -->
     </nav>
+    <div class="container" style="margin-top: 75px;">
+    <map>
         <img src="img/map.png" class="img-responsive" alt="" usemap="#map1488064045164" />
-        <map id="map1488064045164" name="map1488064045164">
-            <area alt="CANADA" title="CANADA" href="#" shape="poly" coords="198,87,135,158,144,224,440,275,524,240,566,186,534,146,554,92,551,65,485,63,498,59,368,57,321,51" />
-            <area alt="USA" title="USA" href="#" shape="poly" coords="194,89,122,74,69,81,57,98,15,132,6,149,18,161,123,158,138,219" />
-            <area alt="USA" title="USA" href="#" shape="poly" coords="137,225,425,282,351,345,351,374,347,396,296,369,245,372,137,354,125,351,99,332,95,287" />
-        </map>
+        <!--<map id="map1488064045164" name="map1488064045164">-->
+        <!--<area alt="CANADA" title="CANADA" href="#" shape="poly" coords="198,87,135,158,144,224,440,275,524,240,566,186,534,146,554,92,551,65,485,63,498,59,368,57,321,51" />-->
+        <!--<area alt="USA" title="USA" href="#" shape="poly" coords="194,89,122,74,69,81,57,98,15,132,6,149,18,161,123,158,138,219" />-->
+        <!--<area alt="USA" title="USA" href="#" shape="poly" coords="137,225,425,282,351,345,351,374,347,396,296,369,245,372,137,354,125,351,99,332,95,287" />-->
+    </map>
     </div>
 
     <!-- Footer -->
