--- a/options.html
+++ b/options.html
@@ -34,7 +34,7 @@
 </head>
 
 
-<body>
+<body class="body">
     
      <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
@@ -73,7 +73,7 @@
     
     <div class="container">
         <div class="jumbotron info-box" id="map-random">
-                <a href="map.html" type="button" class="btn btn-block btn-primary btn-lg">By Map</a>
+                <a href="#" type="button" class="btn btn-block btn-primary btn-lg">By Map (Unavailable)</a>
                 <a href="questions.html" type="button" class="btn btn-block btn-primary btn-lg">Random</a>
         </div>
     </div>
