--- a/questions.html
+++ b/questions.html
@@ -34,7 +34,7 @@
 </head>
 
 
-<body>
+<body class="body">
    
      <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
         <div class="container-fluid">
