Linked youtube video instead of mp4 file for hosting.

--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
     </header>
     <div>
         <div class="embed-responsive embed-responsive-16by9">
-            <video autoplay controls loop muted class="embed-responsive-item">
-                <source src="img/demo.mp4" type="video/mp4">
-            </video>
+            <!--<video autoplay controls loop muted class="embed-responsive-item">-->
+            <!--    <source src="https://youtu.be/wi3YhDXUPTc" type="video/mp4">-->
+            <!--</video>-->
+            <iframe autoplay controls loop muted width="560" height="315" src="https://www.youtube.com/embed/wi3YhDXUPTc?rel=0&autoplay=1& &showinfo=0&controls=1&autohide=1&loop=1&playlist=wi3YhDXUPTc" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
     <hr>
