Fixed audio and auto play for the youtube video

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
+    <script async src="https://www.youtube.com/iframe_api"></script>
+    <script src="js/video.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -82,10 +83,8 @@
     </header>
     <div>
         <div class="embed-responsive embed-responsive-16by9">
-            <!--<video autoplay controls loop muted class="embed-responsive-item">-->
-            <!--    <source src="https://youtu.be/wi3YhDXUPTc" type="video/mp4">-->
-            <!--</video>-->
-            <iframe autoplay controls loop muted width="560" height="315" src="https://www.youtube.com/embed/wi3YhDXUPTc?rel=0&autoplay=1& &showinfo=0&controls=1&autohide=1&loop=1&playlist=wi3YhDXUPTc" frameborder="0" allowfullscreen></iframe>
+            <div id="muteYouTubeVideoPlayer"></div>
+            <!--<iframe autoplay controls loop muted width="560" height="315" src="https://www.youtube.com/embed/wi3YhDXUPTc?rel=0&autoplay=1& &showinfo=0&controls=1&autohide=1&loop=1&playlist=wi3YhDXUPTc" frameborder="0" allowfullscreen></iframe>-->
         </div>
     </div>
     <hr>
